<resources>
    <string name="app_name">ProjectDB</string>
    <string name="btn_advance">Advance</string>
    <string name="btn_basic">Basic</string>
    <string name="btn_push">Push</string>
    <string name="fail_read">Failed to read value: %s</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_display_name">Display Name</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Write your post…</string>
    <string name="hint_username">Username…</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_logout">Log out</string>
    <string name="post">Post</string>
    <string name="send">SEND</string>
    <string name="required">Required</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_settings">Settings</string>
    <string name="error_field_required">Fill the missing field</string>

    <string-array name="headings">
        <item>Recent</item>
        <item>My Posts</item>
        <item>My Top Posts</item>
    </string-array>

</resources>
